<resources>
    <string name="app_name">Database</string>
    <string name="pass">Password</string>
    <string name="uname">User Name</string>
    <string name="user_info">user_info</string>
    <string name="login">Login</string>
    <string name="sign">Sign Up</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="age">Age</string>
    <string name = "success">Successfully changed</string>
    <string name = "success_info">Successfully saved</string>
    <string name = "ok">ok</string>
</resources>
